fix: improve scrollbars ux

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_cosmetic.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_cosmetic.sass
@@ -47,7 +47,7 @@
 
 *::-webkit-scrollbar-thumb
   background-color: $scrollThumbColor
-  border-radius: 1px
+  border-radius: 4px
 
 /* Scrollbar Firefox*/
 *
